[gd_scene load_steps=4 format=3 uid="uid://3iabpapfh3tbw"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/LSTMs/LSTMs.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="LSTMs" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="InputSequence" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="InputTokens" type="Node3D" parent="InputSequence"]

[node name="InputLabel" type="CSGBox3D" parent="InputSequence"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="LSTMCell" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CellCore" type="CSGBox3D" parent="LSTMCell"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="CellLabel" type="CSGBox3D" parent="LSTMCell"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Gates" type="Node3D" parent="LSTMCell"]

[node name="ForgetGate" type="Node3D" parent="LSTMCell/Gates"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.5, 0)

[node name="ForgetCore" type="CSGSphere3D" parent="LSTMCell/Gates/ForgetGate"]
radius = 0.4
material_override = SubResource("StandardMaterial3D_3")

[node name="ForgetLabel" type="CSGBox3D" parent="LSTMCell/Gates/ForgetGate"]
size = Vector3(1.5, 0.2, 0.2)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="InputGate" type="Node3D" parent="LSTMCell/Gates"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 1.5, 0)

[node name="InputCore" type="CSGSphere3D" parent="LSTMCell/Gates/InputGate"]
radius = 0.4
material_override = SubResource("StandardMaterial3D_3")

[node name="InputGateLabel" type="CSGBox3D" parent="LSTMCell/Gates/InputGate"]
size = Vector3(1.5, 0.2, 0.2)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="OutputGate" type="Node3D" parent="LSTMCell/Gates"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)

[node name="OutputCore" type="CSGSphere3D" parent="LSTMCell/Gates/OutputGate"]
radius = 0.4
material_override = SubResource("StandardMaterial3D_3")

[node name="OutputGateLabel" type="CSGBox3D" parent="LSTMCell/Gates/OutputGate"]
size = Vector3(1.5, 0.2, 0.2)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="CellState" type="Node3D" parent="LSTMCell"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)

[node name="StateCore" type="CSGSphere3D" parent="LSTMCell/CellState"]
radius = 0.5
material_override = SubResource("StandardMaterial3D_2")

[node name="StateLabel" type="CSGBox3D" parent="LSTMCell/CellState"]
size = Vector3(2, 0.2, 0.2)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="HiddenState" type="Node3D" parent="LSTMCell"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="HiddenCore" type="CSGSphere3D" parent="LSTMCell/HiddenState"]
radius = 0.5
material_override = SubResource("StandardMaterial3D_2")

[node name="HiddenLabel" type="CSGBox3D" parent="LSTMCell/HiddenState"]
size = Vector3(2, 0.2, 0.2)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="OutputSequence" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="OutputTokens" type="Node3D" parent="OutputSequence"]

[node name="OutputLabel" type="CSGBox3D" parent="OutputSequence"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="MemoryFlow" type="Node3D" parent="."]

[node name="MemoryParticles" type="Node3D" parent="MemoryFlow"]

[node name="GateActivations" type="Node3D" parent="."]

[node name="ActivationIndicators" type="Node3D" parent="GateActivations"]

[node name="TrainingMetrics" type="Node3D" parent="."]

[node name="LossMeter" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="LossBase" type="CSGBox3D" parent="TrainingMetrics/LossMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="LossIndicator" type="CSGSphere3D" parent="TrainingMetrics/LossMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="AccuracyMeter" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="AccuracyBase" type="CSGBox3D" parent="TrainingMetrics/AccuracyMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="AccuracyIndicator" type="CSGSphere3D" parent="TrainingMetrics/AccuracyMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
